[package]
name = "uninit-tools"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["alloc"]
alloc = []
nightly = []

ioslice = ["ioslice_"]
ioslice-iobox = ["ioslice", "ioslice_/alloc"]

[dependencies]
ioslice_ = { package = "ioslice", version = "0.6.0-alpha.0", path = "../ioslice", optional = true }
