[package]
name = "uninit-tools"
version = "0.0.2"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "A crate that allows working with uninitialized memory entirely in safe code"
repository = "https://github.com/4lDO2/uninit-tools-rs"
documentation = "https://docs.rs/uninit-tools"
exclude = ["target"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["alloc"]
alloc = []
nightly = []

ioslice = ["ioslice_"]
ioslice-iobox = ["ioslice", "ioslice_/alloc"]

[dependencies]
ioslice_ = { package = "ioslice", version = "0.6.0-alpha.0", optional = true }
